--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>1.9.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit</artifactId>
+            <version>1.9.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
